...
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintBottom_toTopOf="@+id/fragment_recipe_detail_rv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/fragment_recipe_detail_ingredient_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
...
